--- a/app/views/comments/show.html.slim
+++ b/app/views/comments/show.html.slim
@@ -7,6 +7,6 @@ p
   strong Post:
   = @comment.post
 
-= link_to 'Edit', edit_comment_path(@comment)
-'|
-= link_to 'Back', comments_path
+/ = link_to 'Edit', edit_comment_path(@comment)
+/ '|
+/ = link_to 'Back', comments_path
