--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,5 +5,8 @@ html
 		= stylesheet_link_tag "application", media: "all"
 		= javascript_include_tag "application"
 		= csrf_meta_tags
+		= debug(session) if Rails.env == 'development'
+		= debug(params)  if Rails.env == 'development'
+
 	body
 		= yield
