--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -28,7 +28,7 @@ table
       td = group.people
       td = group.name
       td = group.introduce
-      td = group.founders.first
+      td = group.founders.first.email
       td = link_to 'Show', group
       td = link_to 'Edit', edit_group_path(group)
       td = link_to 'Destroy', group, :confirm => 'Are you sure?', :method => :delete
