--- a/app/views/parties/new.html.slim
+++ b/app/views/parties/new.html.slim
@@ -16,6 +16,13 @@ h1 New party
   .field
     = f.label :place
     = f.text_field :place
+  h3 TodoList
+  - @party.todolists.build
+  .field
+    = f.fields_for :todolists do |todolist|
+      .field
+        = todolist.label :list
+        = todolist.text_field :list
   .actions = f.submit 'Save'
 
 = link_to 'Back', group_parties_path(@group)
