--- a/app/views/parties/new.html.slim
+++ b/app/views/parties/new.html.slim
@@ -8,11 +8,8 @@ h1 New party
     = f.label :date
     = f.date_select :date
   .field
-    = f.label :starttime
-    = f.time_select :starttime
-  .field
-    = f.label :endtime
-    = f.time_select :endtime
+    = f.label :time
+    = f.text_field :time
   .field
     = f.label :place
     = f.text_field :place
